<resources>
    <string name="app_name">Movies</string>
    <string name="oviewview">Oviewview</string>
    <string name="overview">Overview:</string>
    <string name="genre">Genre</string>
    <string name="release_date">Release Date:</string>
    <string name="release">release</string>
    <string name="title">Title:</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Movies</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="rating">IMDb Rating:</string>
    <string name="title_activity_movies">MoviesActivity</string>
    <string name="rate_us">Rate Us</string>
</resources>
