<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".view.activities.NowPlayingDetailsActivity">
    <LinearLayout
        android:id="@+id/relative"
        android:layout_weight=".7"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/youtubePlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        </com.google.android.youtube.player.YouTubePlayerView>
        <!--<android.support.v7.widget.RecyclerView-->
        <!--android:layout_weight="1"-->
        <!--android:id="@+id/recycle"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>-->
    </LinearLayout>
    <LinearLayout
        android:id="@+id/video_control"
        android:layout_width="match_parent"
        android:layout_weight=".15"
        android:layout_height="0dp"
        android:background="#e7000000"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"

            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/play_video"
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:layout_margin="5dp"
                android:scaleType="centerInside"
                android:visibility="gone"
                android:background="@null"
                android:src="@drawable/playbutton" />

            <ImageButton
                android:id="@+id/pause_video"
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:scaleType="centerInside"
                android:layout_margin="5dp"
                android:background="@null"
                android:src="@drawable/pausebutton" />
        </RelativeLayout>

        <SeekBar
            android:layout_weight="6.5"
            android:id="@+id/video_seekbar"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:layout_width="0dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"

            android:minHeight="11dip"
            android:maxHeight="11dip" />

        <TextView
            android:id="@+id/play_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1.5"
            android:text="--:--"
            android:textColor="@color/white" />
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"

            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/fullscreen"
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:layout_margin="5dp"
                android:scaleType="centerInside"
                android:background="@null"
                android:src="@drawable/full" />
            <ImageButton
                android:id="@+id/small"
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:visibility="gone"
                android:layout_margin="5dp"
                android:scaleType="centerInside"
                android:background="@null"
                android:src="@drawable/small" />
        </RelativeLayout>

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/recycleview"
        android:layout_weight=".4"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </android.support.v7.widget.RecyclerView>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_margin="3dp"
        android:layout_weight=".75"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:weightSum="2"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/land"
                android:layout_weight="1"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <ImageView
                    android:src="@mipmap/ic_launcher"
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:id="@+id/poster"
                    android:scaleType="centerCrop"
                    android:layout_height="200dp" />

                <ScrollView
                    android:layout_weight="1.3"
                    android:layout_width="0dp"
                    android:layout_height="200dp">
                    <LinearLayout
                        android:layout_marginLeft="5dp"

                        android:orientation="vertical"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textStyle="bold"
                            android:text="@string/title"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:text="Title"
                            android:textSize="17sp"
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:textStyle="bold"
                            android:text="@string/release_date"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:text="@string/release"
                            android:textSize="15sp"
                            android:id="@+id/release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:text="@string/rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:text="@string/rating"
                            android:textSize="15sp"
                            android:id="@+id/rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:textStyle="bold"
                            android:text="Genre:"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:text="@string/genre"
                            android:id="@+id/genre"
                            android:textSize="17sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:textStyle="bold"
                            android:text="Country:"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:text="Country"
                            android:id="@+id/country"
                            android:textSize="17sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:textStyle="bold"
                            android:text="Company:"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:text="Company"
                            android:id="@+id/company"
                            android:textSize="17sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:textStyle="bold"
                            android:text="Overview:"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_weight="1"
                            android:text="@string/oviewview"
                            android:textSize="17sp"
                            android:gravity="left"
                            android:id="@+id/overview"
                            android:padding="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#e7e7e7" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>